# metal-renderer-cpp

./: .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json
MetalEngine/: AppDelegate.cpp  AppDelegate.hpp  Engine.cpp  Engine.hpp  Matrix.cpp  Matrix.hpp  NSWindowExtensions.hpp  Renderer.cpp  Renderer.hpp  ViewDelegate.cpp  ViewDelegate.hpp  main.cpp
MetalEngine.xcodeproj/: project.pbxproj
MetalEngine.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
MetalEngine.xcodeproj/project.xcworkspace/xcuserdata/marco.xcuserdatad/: UserInterfaceState.xcuserstate
MetalEngine.xcodeproj/xcshareddata/xcschemes/: MetalEngine.xcscheme
MetalEngine.xcodeproj/xcuserdata/marco.xcuserdatad/xcschemes/: xcschememanagement.plist
MetalEngine/shaders/: Shaders.metal
